Rewrite all 8 guide files with substantial depth
guides/migration-guide.md (467 → 943 lines):
- All LTS-to-LTS migration paths (8→11→17→21→25→26)
- Breaking changes, commands, common errors per version jump
- jdeps/jdeprscan tool usage

guides/cheat-sheet.md (322 → 822 lines):
- Syntax/API/JVM flags/diagnostic tools quick reference
- GC selection decision tree
- JDK 26 feature summary with code snippets

guides/jfr.md (123 → 1090 lines):
- Complete JFR event catalog, startup methods, configuration
- JMC views, Streaming API, JDK 25 new features
- 3 practical cases: memory leak, latency, CPU hotspot
- Custom events, jfr CLI tool

guides/pattern-matching.md (185 → 1181 lines):
- instanceof/switch/record/unnamed/primitive patterns
- Sealed classes integration, exhaustive switch
- 4 practical apps: JSON AST, expression evaluator, state machine
- 6 common pitfalls with fixes

guides/faq.md (418 → 733 lines):
- Version/distribution selection, performance, migration,
  security, containers, future roadmap

guides/modules.md (166 → 730 lines):
- 5-min quickstart, migration steps, 5 common problems
- jlink + Docker, Maven/Gradle config

guides/learning-path.md (268 → 735 lines):
- 5 role-based paths: backend, perf, security, framework, contributor

guides/jdk-distributions.md (215 → 577 lines):
- 10 distributions compared, decision tree, LTS support table

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>